# dictators-rubikscube

./: .gitignore  .vercelignore  AGENTS.md  CONTRIBUTING.md  LANDING_PAGE_PROMPT.md  LICENSE  PuzzleCube.cpp  README.md  package-lock.json  package.json  requirements.txt  vercel.json
backend/: CMakeLists.txt  README.md
backend/api/: .env.example  README.md  openapi.yaml  package-lock.json  package.json  vitest.config.ts
backend/api/prisma/: schema.prisma
backend/api/src/: README.md  app.ts  cube.js  cube.ts  index.ts  mockServer.js  mockServer.ts  routes.js  routes.test.js  server.js  solverHybrid.test.js  validation.js  validation.test.js  validation.ts  wasmSolver.js
backend/api/src/config/: env.ts
backend/api/src/lib/: aiCoach.js  aiCoach.ts  aiCoachRuntime.js  auth.ts  http.ts  jwt.ts  moveCoach.ts  password.ts  prisma.ts  refreshSessions.ts  solve.ts
backend/api/src/routes/: aiHelp.ts  auth.ts  cube.ts  cubeSessions.ts  index.ts  solveRecords.ts  stats.ts
backend/api/src/solvers/: nxn_solver_bridge.py  pythonNotation.js  pythonNotation.test.js  pythonNxNSolver.js  solvePipeline.js  solvePipeline.test.js  wasmSolver.js
backend/api/tests/: aiCoach.test.ts  app.test.ts  authAndPersistence.test.ts  moveCoach.test.ts  security.test.ts  solverFallback.test.ts  solverIntegration.test.ts  vercelHandler.test.ts
backend/include/: PuzzleCube.h
backend/src/: main.cpp
backend/src/cube/: CubeOperations.cpp  CubeOperations.h  CubeState.hpp  PuzzleCube.cpp  PuzzleCube.h  solver_bridge.cpp
backend/tests/: ConsoleTest.cpp  scrambleAndSolveTest.cpp
(+322 files in other folders)
